SUBDIRS =      \
	catch2       \
	pseudopod    \
	rapidxml     \
	tinyformat   \
	pcg-cpp

noinst_HEADERS =                                      \
	nonstd/optional.hpp                                 \
	multi/config/NODISCARD.hpp                   \
	multi/config/no_unique_address.hpp                   \
	multi/utility.hpp                   \
	multi/array.hpp                   \
	multi/detail/layout.hpp                   \
	multi/detail/types.hpp                   \
	multi/detail/monotonic_allocator.hpp                   \
	multi/detail/operators.hpp                   \
	multi/detail/cuda/ptr.hpp                   \
	multi/detail/generic_allocator.hpp                   \
	multi/detail/memory.hpp                   \
	multi/detail/adl.hpp                   \
	multi/detail/serialization.hpp                   \
	multi/detail/stack_allocator.hpp                   \
	multi/detail/index_range.hpp                   \
	multi/memory/monotonic.hpp                   \
	multi/memory/block.hpp                   \
	multi/memory/fallback.hpp                   \
	multi/memory/instrumented.hpp                   \
	multi/memory/stack.hpp                   \
	multi/memory/allocator.hpp                   \
	multi/memory/adaptors/cuda/algorithm.hpp                   \
	multi/memory/adaptors/cuda/cstring.hpp                   \
	multi/memory/adaptors/cuda/error.hpp                   \
	multi/memory/adaptors/cuda/malloc.hpp                   \
	multi/memory/adaptors/cuda/allocator.hpp                   \
	multi/memory/adaptors/cuda/clib.hpp                   \
	multi/memory/adaptors/cuda/managed/malloc.hpp                   \
	multi/memory/adaptors/cuda/managed/allocator.hpp                   \
	multi/memory/adaptors/cuda/managed/clib.hpp                   \
	multi/memory/adaptors/cuda/managed/ptr.hpp                   \
	multi/memory/adaptors/cuda/ptr.hpp                   \
	multi/complex.hpp                   \
	multi/adaptors/fftw.hpp                   \
	multi/adaptors/rangev3.hpp                   \
	multi/adaptors/lapack/triangular.hpp                   \
	multi/adaptors/lapack/core.hpp                   \
	multi/adaptors/lapack/cuda.hpp                   \
	multi/adaptors/lapack/potrf.hpp                   \
	multi/adaptors/lapack/syev.hpp                   \
	multi/adaptors/cufft.hpp                   \
	multi/adaptors/cuda.hpp                   \
	multi/adaptors/cuda/algorithms/copy.hpp                   \
	multi/adaptors/blas.hpp                   \
	multi/adaptors/blas/side.hpp                   \
	multi/adaptors/blas/axpy.hpp                   \
	multi/adaptors/blas/filling.hpp                   \
	multi/adaptors/blas/dot.hpp                   \
	multi/adaptors/blas/gemm.hpp                   \
	multi/adaptors/blas/ger.hpp                   \
	multi/adaptors/blas/core.hpp                   \
	multi/adaptors/blas/herk.hpp                   \
	multi/adaptors/blas/trsv.hpp                   \
	multi/adaptors/blas/gemv.hpp                   \
	multi/adaptors/blas/swap.hpp                   \
	multi/adaptors/blas/trsm.hpp                   \
	multi/adaptors/blas/cuda.hpp                   \
	multi/adaptors/blas/numeric.hpp                   \
	multi/adaptors/blas/nrm2.hpp                   \
	multi/adaptors/blas/syrk.hpp                   \
	multi/adaptors/blas/operations.hpp                   \
	multi/adaptors/blas/iamax.hpp                   \
	multi/adaptors/blas/scal.hpp                   \
	multi/adaptors/blas/asum.hpp                   \
	multi/adaptors/blas/copy.hpp                   \
	multi/adaptors/thrust/allocator_traits.hpp                   \
	multi/adaptors/thrust/algorithms.hpp                   \
	multi/adaptors/fft.hpp                   \
	multi/array_ref.hpp                   \
	mpi3/shared_window.hpp                   \
	mpi3/shared_main.hpp                   \
	mpi3/match.hpp                   \
	mpi3/fwd.hpp                   \
	mpi3/types.hpp                   \
	mpi3/address.hpp                   \
	mpi3/status.hpp                   \
	mpi3/shared_communicator.hpp                   \
	mpi3/buffer.hpp                   \
	mpi3/rma/counter.hpp                   \
	mpi3/rma/memory.hpp                   \
	mpi3/rma/mutex.hpp                   \
	mpi3/window.hpp                   \
	mpi3/wall_clock.hpp                   \
	mpi3/info.hpp                   \
	mpi3/ostream.hpp                   \
	mpi3/FILE.hpp                   \
	mpi3/shared_mutex.hpp                   \
	mpi3/communicator_fwd.hpp                   \
	mpi3/process.hpp                   \
	mpi3/detail/datatype.hpp                   \
	mpi3/detail/basic_mutex.hpp                   \
	mpi3/detail/iterator.hpp                   \
	mpi3/detail/buffer.hpp                   \
	mpi3/detail/monotonic.hpp                   \
	mpi3/detail/call.hpp                   \
	mpi3/detail/basic_communicator.hpp                   \
	mpi3/detail/equality.hpp                   \
	mpi3/detail/iterator_traits.hpp                   \
	mpi3/detail/just.hpp                   \
	mpi3/detail/strided.hpp                   \
	mpi3/detail/value_traits.hpp                   \
	mpi3/detail/package.hpp                   \
	mpi3/dynamic_window.hpp                   \
	mpi3/error.hpp                   \
	mpi3/handle.hpp                   \
	mpi3/vector.hpp                   \
	mpi3/graph_communicator.hpp                   \
	mpi3/shm/pool.hpp                   \
	mpi3/shm/vector.hpp                   \
	mpi3/shm/managed_shared_memory.hpp                   \
	mpi3/shm/allocator.hpp                   \
	mpi3/shm/memory.hpp                   \
	mpi3/shm/mutex.hpp                   \
	mpi3/shm/multi_array.hpp                   \
	mpi3/stl/inplace_merge.hpp                   \
	mpi3/generalized_request.hpp                   \
	mpi3/communicator/operators.hpp                   \
	mpi3/communicator/operatorators.hpp                   \
	mpi3/operation.hpp                   \
	mpi3/communication_mode.hpp                   \
	mpi3/communicator.hpp                   \
	mpi3/exception.hpp                   \
	mpi3/future.hpp                   \
	mpi3/allocator.hpp                   \
	mpi3/cartesian_communicator.hpp                   \
	mpi3/main.hpp                   \
	mpi3/type.hpp                   \
	mpi3/mutex.hpp                   \
	mpi3/experimental/array.hpp                   \
	mpi3/experimental/remote.hpp                   \
	mpi3/port.hpp                   \
	mpi3/group.hpp                   \
	mpi3/package_archive.hpp                   \
	mpi3/version.hpp                   \
	mpi3/test/communicator_create.hpp                   \
	mpi3/error_handler.hpp                   \
	mpi3/multi_array.hpp                   \
	mpi3/request.hpp                   \
	mpi3/communicator_iterator.hpp                   \
	mpi3/message.hpp                   \
	mpi3/environment.hpp
